# labsd

./: .gitignore
01/: CMakeLists.txt  OrderedSet.h  charTest.c  longTest.c  makefile
02/: CMakeLists.txt  SortedList.h  eratostene.c  length.c  testSortedList.c
03/: CMakeLists.txt  DoubleLinkedList.h  problem.c
04/: CMakeLists.txt  Queue.h  Stack.h  parantheses.c  radix_sort.c  testQueue.c
05/: CMakeLists.txt  Makefile  Tree.h  testTree.c
06/: BST.h  BSTList.c  CMakeLists.txt  List.h  Queue.h  testBST.c
07/: AVLTree.h  CMakeLists.txt  testAVL.c
08/: CMakeLists.txt  Heap.h  TestHeap.c
09/: CMakeLists.txt  heap.h  huffman.h
10/: CMakeLists.txt  Graph.c  testGraph.c
11/: CMakeLists.txt  MinHeap.h  graph.c  heap.h
12/: CMakeLists.txt  words.c
